[package]
name = "petri"
version = "0.1.0"
edition = "2021"
description = "Show running processes in a tree structure"
readme = "README.md"
homepage = "https://github.com/ynuwenhof/petri"
repository = "https://github.com/ynuwenhof/petri"
license = "MIT OR Apache-2.0"

[dependencies]
sysinfo = "0.29.0"

[dependencies.clap]
version = "4.2.7"
features = ["derive"]
